Fix spacing in selector for squares and correct transition property in Basic_Style.css

--- a/Basic_Style.css
+++ b/Basic_Style.css
@@ -15,7 +15,7 @@ h1{
     border-radius: 5%;
 }
 
-.container .squares:nth-child(-n+4) {
+.container .squares:nth-child(-n+4){
     background-image: url("../Icon Folder/icon.png");
     color: #fff;
     float: left;
@@ -25,18 +25,8 @@ h1{
     border: 1px solid black;
     border-radius: 25%;
     cursor: pointer;
-}
-.container .sqaures:nth-child(-n+4){
-    background-image: url("../Icon Folder/icon.png");
-    color: #fff;
-    float: left;
-    width: 100px;
-    height: 100px;
-    margin: 5px;
-    border: 1px solid black;
-    border-radius: 25%;
-    cursor: pointer;
-    transition: transofrm .5s ease-in-out
+   transition: transform 0.5s ease-in-out;
+
 }
 
 
